# python-dqlite-client

./: DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: connection-pooling.md  data-types.md  deployment.md
src/dqliteclient/: __init__.py  _dial.py  cluster.py  connection.py  exceptions.py  node_store.py  pool.py  protocol.py  retry.py
tests/: conftest.py  test_abort_protocol_address_log.py  test_abort_protocol_cancel_shield.py  test_abort_protocol_non_cancel_exception_during_drain.py  test_acquire_else_release_shielded.py  test_add_node_address_validation.py  test_addr_equiv.py  test_addr_suffix_log_safe.py  test_admin_connection_forwards_governors.py  test_admin_connection_wraps_oserror.py  test_admin_ops_partial_failure.py  test_admin_rpcs_preserve_cache_on_success.py  test_aexit_non_cancel_close_failure_suppression.py  test_aexit_shield_close_orphan.py  test_aggregate_error_chain_children_cap.py  test_allowlist_policy.py  test_async_connection_sibling_task_begin_guard.py  test_begin_failure_keeps_flag_false.py  test_blob_insert_mid_write_failure.py  test_bound_loop_cleared_on_failed_connect.py  test_bound_loop_weakref_does_not_pin_closed_loop.py  test_cached_fast_path_uses_asyncio_timeout.py  test_cached_leader_fast_path_verify_timeout.py  test_check_in_use_error_includes_task_identity.py  test_check_in_use_foreign_task_tx_owner.py  test_check_in_use_preserves_no_loop_runtime_error.py  test_check_in_use_reports_claimant_and_current.py  test_check_redirect_clusterpolicyerror_raw_message.py  test_client_value_dataclasses_final.py  test_close_clears_tx_flags.py  test_close_drain_uses_asyncio_timeout.py  test_close_during_connect_race.py  test_close_fork_pid_shortcut_clears_in_use_flag.py  test_close_impl_final_wait_closed_shielded.py  test_close_impl_pending_drain_cancelling_delta.py  test_close_impl_reaps_pending_drain_created_during_await.py  test_close_impl_resnapshot_non_cancel_exception_swallow.py  test_close_pool_released_fork_branch_runs.py  test_close_then_reconnect_clears_closed_flags.py  test_close_timeout_floor_rationale_public.py  (+388 more)
tests/integration/: conftest.py  test_close_during_transaction.py  test_cluster_admin_membership_live.py  test_cluster_admin_methods_live.py  test_cluster_connect_returns_conn.py  test_cluster_control_smoke.py  test_cluster_shape.py  test_concurrent_writers.py  test_continuation_frames.py  test_in_transaction_raw_begin.py  test_pool_acquire_cleanup_close_error_suppression.py  test_pool_concurrent_tx_leader_flip.py  test_query_raw_apis.py  test_savepoint_untracked_then_tracked.py  test_single_node.py
