[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqlite-client"
version = "0.1.0"
description = "Async Python client for dqlite with connection pooling and leader detection"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Antoine Leclair", email = "antoineleclair@gmail.com" }]
keywords = ["dqlite", "sqlite", "distributed", "database", "async", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]
dependencies = ["dqlite-wire>=0.1.0"]

[project.urls]
Homepage = "https://github.com/letsdiscodev/python-dqlite-client"
Repository = "https://github.com/letsdiscodev/python-dqlite-client"
Issues = "https://github.com/letsdiscodev/python-dqlite-client/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "pytest-asyncio>=0.23", "mypy>=1.0", "ruff>=0.4"]
yaml = ["pyyaml>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/dqliteclient"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
python_version = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["dqliteclient", "dqlitewire"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
